# MarkGate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yaml  pypi-publish.yaml
docker/: .dockerignore  compose.yaml
docker/.env.d/: dockling-serve.env  markgate.env  paddle.env
docker/mounts_config/: versions.toml.example
docker/mounts_config/markgate/config/: .env.secret  .env.secret.example  backend_config.toml  server_config.toml
docker/mounts_config/paddle/: pipeline_config_vllm.yaml
schemas/: backends.schema.json
scripts/: gen_schema.py
src/markgate/: config.py  contracts.py  main.py  media.py  models.py  schemas.py  security.py  services.py  storage.py  utils.py
src/markgate/backends/: __init__.py  chandra.py  docling.py  foil.py  marker.py  utils.py
src/markgate/config/: .env.secret  __init__.py  backend_config.toml  loader.py  server_config.toml  settings.py
src/proxy_md_converter/: config.py  main.py  models.py  services.py
