[project]
name = "markgate"
version = "0.1.2-alpha"
description = "Proxy between open-webui and document to text conversion backends with versioned and persistant cache management."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    # FastAPI & co
    "fastapi-offline==1.7.5",
    "fastapi[standard-no-fastapi-cloud-cli] == 0.127.0",
    "pydantic-settings>=2.0.0",
    # Other
    "aioboto3>=15.5.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff==0.14.10",
    "ty==0.0.7",
    "types-redis>=4.6.0",
    "types-aiobotocore[s3]>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markgate"]

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
