[project]
name = "markgate"
version = "0.1.3"
description = "Proxy between open-webui and document to text conversion backends with versioned and persistant cache management."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    # FastAPI & co
    "fastapi-offline==1.7.5",
    "fastapi[standard-no-fastapi-cloud-cli] == 0.135.1",
    "pydantic-settings>=2.0.0",
    # Other
    "aioboto3>=15.5.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "pillow>=12.1.1",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.6",
    "ty==0.0.23",
    "types-aiobotocore[s3]>=3.0.0",
]

[tool.ty.environment]
extra-paths = ["src/markgate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markgate"]

